--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Hotel Management</title>
 
 </head>
 <body>
@@ -23,7 +23,7 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="#hotelManagement">Why Hotel Management</a>
-            <a href="#whyChennaiAmirta">Why Chennais Amirta</a>
+            <a href="#whyChennaiAmirta">Why Chennais Management</a>
             <a href="#coursesOffered">Courses Offered</a>
             <a href="#campusAdvantage">Campus Advantage</a>
             <a href="#placementRecords">Placement Record</a>
